--- a/frontend/javierlabs-frontend/src/components/navbar component/Navbar.css
+++ b/frontend/javierlabs-frontend/src/components/navbar component/Navbar.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     display: flex; /* Arrange children horizontally */
     width: 100%;
-    height: 50px;
+    height: 8vh;
     justify-content: flex-end;
     align-items: center; /* Vertically align center */
     background: var(--gruvbox-bg0, #282828FF);
